# p2p-file-share

./: README.md  justfile  pyproject.toml
p2p_file_share/: log.py  main.py
p2p_file_share/client/: cli.py  client.py
p2p_file_share/commands/: __init__.py  cd.py  command.py  commands.py  get.py  ls.py  mkdir.py  models.py  put.py  pwd.py
p2p_file_share/common/: hash_utils.py  models.py
p2p_file_share/server/: file_chunker.py  requests_handler.py  server.py
tests/: conftest.py  test_commands_registry.py  test_file_chunker.py  test_hash_utils.py  test_system.py
